--- a/index.html
+++ b/index.html
@@ -2,17 +2,33 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>AR.js GLTF Model Uploader (GitHub Pages)</title>
+    <title>AR.js GLTF Model Uploader with Model Selection</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
+    <style>
+        #ui-container {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            z-index: 999;
+            background: white;
+            padding: 10px;
+        }
+        #modelSelect {
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body style="margin: 0; overflow: hidden;">
-    <div style="position: absolute; top: 10px; left: 10px; z-index: 999; background: white; padding: 10px;">
+    <div id="ui-container">
         <form id="uploadForm">
             <input type="file" id="zipFile" accept=".zip" required>
             <button type="submit">Upload GLTF Model (Zip)</button>
         </form>
+        <select id="modelSelect" style="display: none;">
+            <option value="">Select a model</option>
+        </select>
     </div>
 
     <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
@@ -23,12 +39,21 @@
     </a-scene>
 
     <script>
+        const uploadedModels = [];
+
         document.getElementById('uploadForm').addEventListener('submit', function(e) {
             e.preventDefault();
             const fileInput = document.getElementById('zipFile');
             const file = fileInput.files[0];
             if (file) {
                 handleZipFile(file);
+            }
+        });
+
+        document.getElementById('modelSelect').addEventListener('change', function(e) {
+            const selectedModelUrl = e.target.value;
+            if (selectedModelUrl) {
+                updateARModel(selectedModelUrl);
             }
         });
 
@@ -53,15 +78,31 @@
                 const fileMap = new Map(files.map(file => [file.path, URL.createObjectURL(file.blob)]));
 
                 if (gltfFile) {
-                    const modelUrl = fileMap.get(gltfFile);
-                    updateARModel(modelUrl);
+                    const gltfBlob = await zip.file(gltfFile).async('blob');
+                    const gltfText = await gltfBlob.text();
+                    const gltfJson = JSON.parse(gltfText);
+
+                    // Update buffer and image URIs in the GLTF JSON
+                    if (gltfJson.buffers) {
+                        gltfJson.buffers.forEach(buffer => {
+                            if (buffer.uri && fileMap.has(buffer.uri)) {
+                                buffer.uri = fileMap.get(buffer.uri);
+                            }
+                        });
+                    }
+                    if (gltfJson.images) {
+                        gltfJson.images.forEach(image => {
+                            if (image.uri && fileMap.has(image.uri)) {
+                                image.uri = fileMap.get(image.uri);
+                            }
+                        });
+                    }
+
+                    const updatedGltfBlob = new Blob([JSON.stringify(gltfJson)], {type: 'application/json'});
+                    const modelUrl = URL.createObjectURL(updatedGltfBlob);
                     
-                    // Patch the model loader to use our blob URLs
-                    const oldLoader = THREE.GLTFLoader.prototype.load;
-                    THREE.GLTFLoader.prototype.load = function(url, onLoad, onProgress, onError) {
-                        const newUrl = fileMap.get(url) || url;
-                        return oldLoader.call(this, newUrl, onLoad, onProgress, onError);
-                    };
+                    addModelToList(file.name, modelUrl);
+                    updateARModel(modelUrl);
                 } else {
                     alert('No GLTF/GLB file found in the uploaded zip');
                 }
@@ -71,9 +112,51 @@
             }
         }
 
+        function addModelToList(name, url) {
+            uploadedModels.push({ name, url });
+            updateModelSelect();
+        }
+
+        function updateModelSelect() {
+            const select = document.getElementById('modelSelect');
+            select.innerHTML = '<option value="">Select a model</option>';
+            uploadedModels.forEach((model, index) => {
+                const option = document.createElement('option');
+                option.value = model.url;
+                option.textContent = `${model.name} (Model ${index + 1})`;
+                select.appendChild(option);
+            });
+            select.value = uploadedModels[uploadedModels.length - 1].url;
+            select.style.display = 'block';
+        }
+
         function updateARModel(modelUrl) {
             const modelContainer = document.getElementById('model-container');
-            modelContainer.innerHTML = `<a-entity gltf-model="${modelUrl}" scale="0.1 0.1 0.1"></a-entity>`;
+            modelContainer.innerHTML = `<a-entity id="model" gltf-model="${modelUrl}"></a-entity>`;
+
+            // Wait for the model to load before calculating its size
+            const modelEntity = document.getElementById('model');
+            modelEntity.addEventListener('model-loaded', function () {
+                calculateAndSetScale(modelEntity);
+            });
+        }
+
+        function calculateAndSetScale(modelEntity) {
+            const obj3D = modelEntity.object3D;
+            const box = new THREE.Box3().setFromObject(obj3D);
+            const size = box.getSize(new THREE.Vector3());
+
+            // Calculate the largest dimension
+            const maxDimension = Math.max(size.x, size.y, size.z);
+
+            // Set the desired size (e.g., 1 unit in world space)
+            const desiredSize = 1;
+
+            // Calculate the scale factor
+            const scale = desiredSize / maxDimension;
+
+            // Set the scale of the model
+            modelEntity.setAttribute('scale', `${scale} ${scale} ${scale}`);
         }
     </script>
 </body>
